# prism

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE.md  README.md  install.sh  release-plz.toml
.config/: wt.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release-plz.yml
docs/: auto-flow.md  config.md  development.md  keybindings.md  prism-demo.md
docs/adr/: 0001-tmux-backed-agent-sessions.md  0002-capability-based-harnesses.md  0002-dependency-policy.md  0003-ratatui-crossterm-tui-runtime.md
docs/research/: tmux-embedding-options.md
requirements/: README.md  configuration-and-observability.md  github-workflows.md  plans-and-auto-flow.md  product-foundations.md  repositories-and-board.md  worktree-and-agent-sessions.md
schemas/: config.schema.json
scripts/: full-check.sh  screenshot.sh
scripts/screenshots/: mock-provider.py  prism.tape  run.sh  scenario.py  setup-demo.sh  verify-frames.py
src/: actions.rs  agent.rs  agent_session.rs  args.rs  auto_flow.rs  ci.rs  cli.rs  config.rs  execution.rs  git.rs  github.rs  harness.rs  input.rs  json.rs  lib.rs  lifecycle.rs  main.rs  observability.rs  opencode.rs  plan.rs  plan_run.rs  process.rs  rat_view.rs  repo.rs  review.rs  session.rs  setup.rs  terminal.rs  test_support.rs  tmux.rs  tui.rs  tui_runtime.rs  ui_state.rs  util.rs  verify.rs  view.rs  worker.rs  workspace.rs
src/actions/: auto.rs  mod.rs  opencode_actions.rs  plans.rs  polling.rs  pull_requests.rs  repositories.rs  tests.rs  tmux_agent.rs  tmux_portal.rs  tools.rs  worktrees.rs
tests/: cli.rs  worker.rs
(+55 files in other folders)
