[package]
name = "prism"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A terminal board for agent-backed coding sessions across Git worktrees"
license = "MIT"
repository = "https://github.com/NathanaelRea/prism"
readme = "README.md"
keywords = ["cli", "git", "terminal", "tmux", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ansi-to-tui = { version = "8.0.1", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = [
  "events",
] }
libc = "0.2"
ratatui = { version = "0.30.2", default-features = false, features = [
  "crossterm",
  "unstable-rendered-line-info",
] }
regex = "1.12.4"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "=1.1.2"
toml_edit = "0.24"
